# MV_CourseDesign

./: .gitignore  CMakeLists.txt  README.md
include/: BlockMeasure.hpp  MV_CourseDesign.hpp  StripeMeasure.hpp
output/: README.md
script/: test_dft.m
src/: BlockMeasure.cpp  MV_CourseDesign.cpp  StripeMeasure.cpp  main.cpp  tutor_dft.cpp
